--- a/src/styles.less
+++ b/src/styles.less
@@ -1,10 +1,18 @@
-// @import "primeng/resources/themes/lara-dark-purple/theme.css";
+@import "primeng/resources/themes/lara-dark-purple/theme.css";
 // @import "primeng/resources/themes/arya-green/theme.css";
 // @import "primeng/resources/themes/arya-orange/theme.css";
-@import "primeng/resources/themes/lara-light-purple/theme.css";
+// @import "primeng/resources/themes/lara-light-purple/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
-body {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   font-family: var(--font-family);
+}
+
+.container {
+  width: 1000px;
+  margin: 0 auto;
 }
