--- a/src/app/pages/notes-page/notes-page.component.html
+++ b/src/app/pages/notes-page/notes-page.component.html
@@ -1,3 +1,8 @@
 <div class="container notes-page__container">
   <p-button class="btn" label="Добавить запись"></p-button>
+  <div class="notes-wrapper">
+    <app-note></app-note>
+    <app-note></app-note>
+    <app-note></app-note>
+  </div>
 </div>
