--- a/src/app/pages/notes-page/notes-page.component.less
+++ b/src/app/pages/notes-page/notes-page.component.less
@@ -1,5 +1,16 @@
+@gap: 30px;
 .notes-page__container {
-  margin-top: 30px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: @gap;
+}
+.btn {
+  margin: @gap auto @gap auto;
+}
+.notes-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
