feat: add login and register pages

--- a/src/app/pages/create-note-page/create-note-page.component.html
+++ b/src/app/pages/create-note-page/create-note-page.component.html
@@ -5,7 +5,7 @@
     <div id="editorjs" class="editor"></div>
     <div class="btns-wrapper">
       <p-button label="Готово"></p-button>
-      <p-button label="Назад"></p-button>
+      <p-button label="Назад" (click)="backToNotes()"></p-button>
     </div>
   </div>
 </div>
