--- a/src/app/pages/notes-page/notes-page.component.html
+++ b/src/app/pages/notes-page/notes-page.component.html
@@ -1,5 +1,5 @@
 <div class="container notes-page__container">
-  <p-button class="btn" label="Добавить запись"></p-button>
+  <p-button class="btn" label="Добавить запись" (click)="addNote()"></p-button>
   <div class="notes-wrapper">
     <app-note></app-note>
     <app-note></app-note>
