--- a/src/app/pages/notes-page/components/note/note.component.html
+++ b/src/app/pages/notes-page/components/note/note.component.html
@@ -8,6 +8,7 @@
   </div>
   <div class="text-image-wrapper">
     <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, ea sint ratione consequatur, architecto ipsa odio vero minima amet ut rerum doloremque dignissimos nihil atque deleniti, aliquam dicta? Eligendi, nisi aliquam nesciunt, ipsum labore ea quam culpa facere obcaecati unde rem est repudiandae vero maxime soluta neque dolore eius nam vel. Numquam odit repellat est? Numquam accusantium molestias maxime nemo.</p>
-    <img class="image" src="https://fakeimg.pl/200x200/?text=Hello" alt="">
+    <!-- <img class="image" src="https://fakeimg.pl/200x200/?text=Hello" alt=""> -->
+    <p-image src="https://primefaces.org/cdn/primeng/images/galleria/galleria1.jpg" alt="Image" width="250" [preview]="true"></p-image>
   </div>
 </div>
