--- a/src/app/layout/layout.component.less
+++ b/src/app/layout/layout.component.less
@@ -1,4 +1,5 @@
 header {
   padding: 10px;
-  border-bottom: 1px solid var(--text-color);
+  -webkit-box-shadow: 0px 0px 5px 0px #000000;
+  box-shadow: 0px 0px 5px 0px #000000;
 }
