--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,8 @@
-@import "primeng/resources/themes/arya-green/theme.css";
+// @import "primeng/resources/themes/arya-green/theme.css";
+// @import "primeng/resources/themes/saga-green/theme.css";
+// @import "primeng/resources/themes/soho-light/theme.css";
+// @import "primeng/resources/themes/lara-light-indigo/theme.css";
+@import "primeng/resources/themes/lara-light-purple/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
@@ -8,7 +12,6 @@
   padding: 0;
   font-family: var(--font-family);
 }
-
 .container {
   width: 1000px;
   margin: 0 auto;
