feat: implement checking login data

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,9 +1,9 @@
 <div class="container login-page__container">
-  <div class="login-form">
+  <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <h2 class="title">Вход</h2>
-    <input type="text" pInputText placeholder="Введите логин"/>
-    <p-password [toggleMask]="true" placeholder="Введите пароль"></p-password>
-    <p-button label="Войти"></p-button>
+    <input type="text" pInputText placeholder="Введите логин" formControlName="email"/>
+    <p-password [toggleMask]="true" placeholder="Введите пароль" formControlName="password"></p-password>
+    <p-button label="Войти" type="submit"></p-button>
     <p-button label="Зарегестрироваться" (click)="register()"></p-button>
-  </div>
+  </form>
 </div>
