--- a/src/app/pages/register-page/register-page.component.less
+++ b/src/app/pages/register-page/register-page.component.less
@@ -25,3 +25,13 @@
 :host ::ng-deep .p-password, :host ::ng-deep .p-inputtext, input {
   width: 100%;
 }
+.invalid-message {
+  color: red;
+  border-bottom: 1px solid red;
+}
+.invalid {
+  border-color: red;
+}
+:host ::ng-deep .invalid input {
+  border-color: red;
+}
