feat: add service for monitoring by authorized user or not, add log out

--- a/src/styles.less
+++ b/src/styles.less
@@ -12,6 +12,9 @@
   padding: 0;
   font-family: var(--font-family);
 }
+// html, body {
+//   scrollbar-gutter: stable both-edges;
+// }
 .container {
   width: 1000px;
   margin: 0 auto;
