--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,10 @@
 <header>
-  <div class="container">
+  <div class="container header__container">
     <h1 class="title">Personal Diary</h1>
+    <div *ngIf="isAuthorized" class="log-out" (click)="logOut()">
+      <p>Выйти</p>
+      <i class="pi pi-sign-out" style="font-size: 1.5rem"></i>
+    </div>
   </div>
 </header>
 <ng-content></ng-content>
