--- a/src/app/layout/layout.component.less
+++ b/src/app/layout/layout.component.less
@@ -1,5 +1,29 @@
 header {
-  padding: 10px;
+  // padding: 10px;
+  height: 60px;
   -webkit-box-shadow: 0px 0px 5px 0px #000000;
   box-shadow: 0px 0px 5px 0px #000000;
 }
+.header__container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.title {
+  padding: 9px 0;
+}
+.log-out {
+  display: flex;
+  gap: 5px;
+  cursor: pointer;
+  height: 60px;
+  // width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &:hover {
+    background: #efeded;
+  }
+}
+
