--- a/src/app/pages/notes-page/components/note/note.component.less
+++ b/src/app/pages/notes-page/components/note/note.component.less
@@ -11,11 +11,15 @@
 }
 .text-image-wrapper {
   display: flex;
-  gap: @gap;
-  margin-bottom: @gap;
+  // gap: @gap;
+  justify-content: space-between;
+  // margin-bottom: @gap;
+}
+.text-wrapper {
+  width: 80%;
 }
 .image {
-
+  width: 15%;
 }
 .btns-wrapper {
   display: flex;
