--- a/src/app/pages/notes-page/notes-page.component.html
+++ b/src/app/pages/notes-page/notes-page.component.html
@@ -1,7 +1,18 @@
 <div class="container notes-page__container">
   <p-button class="btn" label="Добавить запись" (click)="addNote()"></p-button>
-  <div class="notes-wrapper" *ngIf="!isLoading">
-    <app-note *ngFor="let note of notes" [note]="note"></app-note>
-  </div>
-    <!-- todo: add loading loader -->
+  <app-infinite-scroll (scrolled)="getNotes()" class="infinite-scroll">
+    <div class="notes-wrapper">
+      <app-note *ngFor="let note of notes" [note]="note" (deletedNote)="deleteNote($event)"></app-note>
+      <p *ngIf="!isLoading && allNotesCount == 0" class="no-notes-message">У Вас пока нет записей</p>
+      <app-loader *ngIf="isLoading;"></app-loader>
+    </div>
+  </app-infinite-scroll>
+
+  <!-- <div class="notes-wrapper">
+    <div *ngIf="isLoading; else note;" class="loading">LOADING</div>
+    <ng-template #note>
+      <app-note *ngFor="let note of notes" [note]="note"></app-note>
+    </ng-template>
+  </div> -->
+  <!-- todo: add loading loader -->
 </div>
