--- a/src/app/pages/notes-page/notes-page.component.less
+++ b/src/app/pages/notes-page/notes-page.component.less
@@ -6,6 +6,9 @@
   flex-direction: column;
   margin-bottom: @gap;
 }
+.infinite-scroll {
+  width: 100%;
+}
 .btn {
   margin: @gap auto @gap auto;
 }
@@ -14,4 +17,9 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+.no-notes-message {
+  font-size: 20px;
+  text-align: center;
+  font-weight: 500;
 }
