feat: add the ability to add images

--- a/src/app/pages/create-note-page/create-note-page.component.html
+++ b/src/app/pages/create-note-page/create-note-page.component.html
@@ -15,16 +15,17 @@
     <app-editor [blocks]="note.body.blocks"></app-editor>
     <!-- <input type="file" multiple="true" accept="image/png, image/jpeg" /> -->
     <p-fileUpload
-      [multiple]="true"
       [maxFileSize]="1000000"
       mode="advanced"
+      [multiple]="true"
       chooseLabel="Выбрать файлы"
       uploadLabel="Загрузить"
       cancelLabel="Отмена"
       name="demo[]"
       url="https://www.primefaces.org/cdn/api/upload.php"
+      [files]="images"
       accept="image/*"
-      (onUpload)="onUpload($event)"
+      (onSelect)="onFilesSelect($event)"
     ></p-fileUpload>
     <!-- maxFileSize="1000000" -->
     <div class="btns-wrapper">
