refactor: remove unused code, correct formatting

--- a/src/app/pages/login-page/login-page.component.less
+++ b/src/app/pages/login-page/login-page.component.less
@@ -12,9 +12,10 @@
 .title {
   text-align: center;
 }
-// :host ::ng-deep .p-button{
-// }
-:host ::ng-deep .p-button, :host ::ng-deep .p-password, :host ::ng-deep .p-inputtext, input {
+:host ::ng-deep .p-button,
+:host ::ng-deep .p-password,
+:host ::ng-deep .p-inputtext,
+input {
   width: 100%;
 }
 .invalid-message {
