--- a/src/app/pages/notes-page/components/note/note.component.less
+++ b/src/app/pages/notes-page/components/note/note.component.less
@@ -10,7 +10,8 @@
   display: flex;
   justify-content: space-between;
 }
-.text-wrapper, .images-wrapper {
+.text-wrapper,
+.images-wrapper {
   width: 100%;
   text-align: center;
 }
@@ -19,7 +20,9 @@
   justify-content: center;
   gap: 10px;
 }
-:host ::ng-deep .p-image-preview-indicator, :host ::ng-deep .p-image-preview-container, :host ::ng-deep img {
+:host ::ng-deep .p-image-preview-indicator,
+:host ::ng-deep .p-image-preview-container,
+:host ::ng-deep img {
   border-radius: var(--border-radius);
 }
 :host ::ng-deep .p-image-preview {
@@ -32,4 +35,3 @@
   gap: 10px;
   justify-content: end;
 }
-
