--- a/src/app/pages/register-page/register-page.component.less
+++ b/src/app/pages/register-page/register-page.component.less
@@ -12,8 +12,7 @@
 .title {
   text-align: center;
 }
-// :host ::ng-deep .p-button{
-// }
+
 .btns-wrapper {
   width: 100%;
   display: flex;
@@ -22,7 +21,9 @@
 :host ::ng-deep .p-button {
   width: calc((300px - 15px) / 2);
 }
-:host ::ng-deep .p-password, :host ::ng-deep .p-inputtext, input {
+:host ::ng-deep .p-password,
+:host ::ng-deep .p-inputtext,
+input {
   width: 100%;
 }
 .invalid-message {
