--- a/src/app/shared/components/editor/editor.component.html
+++ b/src/app/shared/components/editor/editor.component.html
@@ -1,1 +1,7 @@
-<div id="editorjs" tabindex="1" (focusin)="isFocused = true" (focusout)="isFocused = false" [ngClass]="{'editor': true, 'focus': isFocused}"></div>
+<div
+  id="editorjs"
+  tabindex="1"
+  (focusin)="isFocused = true"
+  (focusout)="isFocused = false"
+  [ngClass]="{ editor: true, focus: isFocused }"
+></div>
