--- a/src/app/shared/components/editor/editor.component.less
+++ b/src/app/shared/components/editor/editor.component.less
@@ -9,17 +9,9 @@
   }
 }
 .focus {
-  // outline: 0 none;
-  // outline-offset: 0;
-  box-shadow: 0 0 0 0.2rem #DDD6FE;
-  border-color: #8B5CF6;
+  box-shadow: 0 0 0 0.2rem #ddd6fe;
+  border-color: #8b5cf6;
 }
-// :host ::ng-deep .ce-block__content {
-//   margin: 0 60px;
-// }
-// :host ::ng-deep .ce-toolbar__content {
-//   max-width: 870px;
-// }
 :host ::ng-deep .ce-inline-toolbar__dropdown {
   margin-right: 0;
   &:hover {
