--- a/src/app/pages/create-note-page/create-note-page.component.less
+++ b/src/app/pages/create-note-page/create-note-page.component.less
@@ -15,6 +15,7 @@
     gap: @gap;
   }
 }
+//Убираем две кнопки компонента, чтобы пользоваться только добавлением файлов
 :host ::ng-deep .p-fileupload-buttonbar button {
   display: none;
 }
